[tool.poetry]
name = "todo-flask-api"
version = "0.1.0"
description = "Todo Rest API with flask"
authors = ["Eduardo Flores <efloresambrosio@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
